--- a/src/components/PokemonComponent.module.css
+++ b/src/components/PokemonComponent.module.css
@@ -4,7 +4,7 @@
 .image {
   width: 200px;
 }
-.searchInput{
+.searchInput {
   border: none;
   padding: 10px 10px;
   border-radius: 10px;
@@ -30,14 +30,16 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   color: white;
-  font-weight: 800;
+  font-weight: 900;
+  font-size: 21px;
   background-position-x: center;
   background-blend-mode: soft-light;
   background-image: url(./assets/pokeball.svg);
 }
 .pokedata {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  margin-left: 2rem;
 }
 .modal {
   position: fixed;
@@ -81,8 +83,8 @@
   padding: 0;
   margin: 0;
   display: flex;
-    background-color: white;
-    border-radius: 10px;
+  background-color: white;
+  border-radius: 10px;
 }
 .typezbutton {
   display: inline-block;
