--- a/src/components/PokemonComponent.module.css
+++ b/src/components/PokemonComponent.module.css
@@ -1,8 +1,9 @@
 .container {
-  padding: 20px 20px;
+  padding: 20px;
+  height: 100vh;
 }
 .image {
-  width: 200px;
+  width: 180px;
 }
 .searchInput {
   border: none;
@@ -41,48 +42,12 @@
   flex-direction: column;
   margin-left: 2rem;
 }
-.modal {
-  position: fixed;
-  margin: auto;
-  background-color: white;
-  top: 8rem;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.modalimage {
-  width: 10rem;
-  position: absolute;
-  top: -8rem;
-}
-.modalcontainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-}
-.closeButton {
-  padding: 12px 12px;
-  border-radius: 10px;
-  float: right;
-  border: none;
-  right: 5px;
-  margin-right: 15px;
-  margin-top: 15px;
-}
 .typez {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
+  justify-content: space-around;
   background-color: white;
   border-radius: 10px;
 }
@@ -97,6 +62,50 @@
   font-weight: 600;
   /* Add any other styles you want for the buttons */
 }
+.modal {
+  position: fixed;
+  margin: auto;
+  background-color: white;
+  top: 8rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.modalimage {
+  width: 30%;
+}
+.modalcontainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+.pokename{
+  position: absolute;
+  left:10px;
+  top:0;
+  text-transform: uppercase;
+  font: 2em sans-serif;
+}
+.closeButton {
+  padding: 12px 12px;
+  border-radius: 10px;
+  float: right;
+  border: none;
+  right: 5px;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
 .pokedetailscontainer {
   display: flex;
   justify-content: space-around;
@@ -127,4 +136,111 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5px;
+}
+
+
+/* Pagination styles */
+.pagination {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination .MuiPaginationItem-root {
+  color: #fff;
+  background-color: #3f51b5;
+}
+
+.pagination .MuiPaginationItem-root:hover {
+  background-color: #303f9f;
+}
+
+.pagination .Mui-selected {
+  background-color: #1a237e !important;
+}
+
+
+@media screen and (max-width:600px ){
+  .modal{
+    flex-direction: column;
+  }
+
+  .image {
+    width: 150px;
+  }
+
+  .modal {
+  position: fixed;
+  margin: auto;
+  background-color: white;
+  top: 8rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 70vh;
+  overflow-y: scroll;
+}
+.modalimage {
+  width: 11rem;
+  /* position: absolute; */
+  top: -15%;
+}
+.pokename{
+  position: relative;
+}
+.modalcontainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+.closeButton {
+  padding: 12px 12px;
+  border-radius: 10px;
+  float: right;
+  border: none;
+  right: 5px;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+.pokedetailscontainer {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+}
+.pokedetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.pokedetails p:first-child {
+  font-weight: 700;
+  font-size: 20px;
+}
+.pokedetails p:last-child {
+  background-color: blue;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 5rem;
+  font-weight: 800;
+}
+.pokemonstats {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+}
 }
